feat(evpn): Add Firewall connected to fabric with ESI and BGP (#9)
Reviewed-on: https://git.as73.inetsix.net/labs/clab-eos-mpls-isis-sr/pulls/9
Co-authored-by: Thomas Grimonet <thomas.grimonet@gmail.com>
Co-committed-by: Thomas Grimonet <thomas.grimonet@gmail.com>

--- a/config-builder/documentation/devices/s1-ce04.md
+++ b/config-builder/documentation/devices/s1-ce04.md
@@ -353,6 +353,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| FW | True |
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
@@ -364,6 +365,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
@@ -379,6 +381,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| FW | false |
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
@@ -500,6 +503,7 @@ route-map RM-MARK-ATM-CE04 permit 10
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| FW | enabled |
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
@@ -511,6 +515,8 @@ route-map RM-MARK-ATM-CE04 permit 10
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
