--- a/config-builder/documentation/devices/s1-pe01.md
+++ b/config-builder/documentation/devices/s1-pe01.md
@@ -334,6 +334,7 @@ vlan internal order ascending range 1006 1199
 | ------- | ---- | ------------ |
 | 1101 | ETHERNET_VPN_IRB_S1_CE01-02 | - |
 | 1199 | ETHERNET_VPN_L2VLAN | - |
+| 1301 | FIREWALL-BGP-EXIT-S1-NORTH | - |
 
 ### VLANs Device Configuration
 
@@ -344,6 +345,9 @@ vlan 1101
 !
 vlan 1199
    name ETHERNET_VPN_L2VLAN
+!
+vlan 1301
+   name FIREWALL-BGP-EXIT-S1-NORTH
 ```
 
 ## Interfaces
@@ -474,6 +478,7 @@ interface Port-Channel4
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | ROUTER_ID | default | 10.255.1.1/32 |
 | Loopback1011 | ETHERNET_VPN_IRB | IRB | 10.1.255.1/32 |
+| Loopback1013 | SVC_FIREWALL_LOOPBACK | FW | 10.3.255.1/32 |
 
 ##### IPv6
 
@@ -481,6 +486,7 @@ interface Port-Channel4
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | ROUTER_ID | default | - |
 | Loopback1011 | ETHERNET_VPN_IRB | IRB | - |
+| Loopback1013 | SVC_FIREWALL_LOOPBACK | FW | - |
 
 ##### ISIS
 
@@ -505,6 +511,13 @@ interface Loopback1011
    no shutdown
    vrf IRB
    ip address 10.1.255.1/32
+!
+interface Loopback1013
+   description SVC_FIREWALL_LOOPBACK
+   no shutdown
+   vrf FW
+   ip address 10.3.255.1/32
+   hardware forwarding id
 ```
 
 ### VLAN Interfaces
@@ -514,12 +527,14 @@ interface Loopback1011
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1101 | ETHERNET_VPN_IRB_S1_CE01-02 | IRB | - | False |
+| Vlan1301 | FIREWALL-BGP-EXIT-S1-NORTH | FW | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1101 |  IRB  |  -  |  10.1.1.1/24  |  -  |  -  |  -  |
+| Vlan1301 |  FW  |  10.3.1.2/24  |  -  |  10.3.1.1  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -530,6 +545,13 @@ interface Vlan1101
    no shutdown
    vrf IRB
    ip address virtual 10.1.1.1/24
+!
+interface Vlan1301
+   description FIREWALL-BGP-EXIT-S1-NORTH
+   no shutdown
+   vrf FW
+   ip address 10.3.1.2/24
+   ip virtual-router address 10.3.1.1
 ```
 
 ## Routing
@@ -563,6 +585,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| FW | True |
 | IRB | True |
 | MGMT | False |
 
@@ -571,6 +594,7 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 ```eos
 !
 ip routing
+ip routing vrf FW
 ip routing vrf IRB
 no ip routing vrf MGMT
 ```
@@ -582,6 +606,7 @@ no ip routing vrf MGMT
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
+| FW | false |
 | IRB | false |
 | MGMT | false |
 
@@ -704,6 +729,7 @@ ASN Notation: asdot
 | -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
 | 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
 | 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.3.1.11 | 65103 | FW | - | standard extended | - | - | - | - | - | - | - |
 
 #### Router BGP EVPN Address Family
 
@@ -725,11 +751,13 @@ ASN Notation: asdot
 | ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
 | 1101 | 10.255.1.1:11101 | 11101:11101 | - | - | learned |
 | 1199 | 10.255.1.1:11199 | 11199:11199 | - | - | learned |
+| 1301 | 10.255.1.1:14301 | 14301:14301 | - | - | learned |
 
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
+| FW | 10.255.1.1:13 | connected |
 | IRB | 10.255.1.1:11 | connected |
 
 #### Router BGP Device Configuration
@@ -766,6 +794,13 @@ router bgp 65000
       route-target both 11199:11199
       redistribute learned
    !
+   vlan 1301
+      rd 10.255.1.1:14301
+      route-target both 14301:14301
+      redistribute learned
+      !
+      redistribute router-mac system default-gateway
+   !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
@@ -773,6 +808,22 @@ router bgp 65000
    !
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf FW
+      rd 10.255.1.1:13
+      route-target import evpn 13:13
+      route-target export evpn 13:13
+      router-id 10.255.1.1
+      neighbor 10.3.1.11 peer group FIREWALL-BGP
+      neighbor 10.3.1.11 remote-as 65103
+      neighbor 10.3.1.11 update-source Loopback1013
+      neighbor 10.3.1.11 description FIREWALL-BGP S1-CE01
+      neighbor 10.3.1.11 ebgp-multihop 10
+      neighbor 10.3.1.11 send-community standard extended
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.3.1.11 activate
    !
    vrf IRB
       rd 10.255.1.1:11
@@ -928,12 +979,15 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 90
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| FW | enabled |
 | IRB | enabled |
 | MGMT | disabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance FW
 !
 vrf instance IRB
 !
