--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -341,6 +341,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| FW | True |
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
@@ -352,6 +353,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
@@ -367,6 +369,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| FW | false |
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
@@ -419,6 +422,7 @@ router ospf 1205 vrf ATM
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| FW | enabled |
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
@@ -430,6 +434,8 @@ router ospf 1205 vrf ATM
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
