--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -25,6 +25,7 @@
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
   - [Static Routes](#static-routes)
+  - [Router BGP](#router-bgp)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -249,6 +250,7 @@ alias summary6 show ipv6 bgp summary
 | ------- | ---- | ------------ |
 | 1101 | ETHERNET-VPN-IRB-1101 | - |
 | 1199 | ETHERNET-VPN-L2VLAN-1199 | - |
+| 1301 | FIREWALL-BGP-EXIT-S1-NORTH | - |
 
 ### VLANs Device Configuration
 
@@ -259,6 +261,9 @@ vlan 1101
 !
 vlan 1199
    name ETHERNET-VPN-L2VLAN-1199
+!
+vlan 1301
+   name FIREWALL-BGP-EXIT-S1-NORTH
 ```
 
 ## Interfaces
@@ -321,6 +326,7 @@ interface Port-Channel1
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1101 | vrf-irb-vlan1101 | IRB | - | False |
 | Vlan1199 | vrf-irb-vlan1199 | L2VLAN | - | False |
+| Vlan1301 | vrf-irb-vlan1301 | FW | - | False |
 
 ##### IPv4
 
@@ -328,6 +334,7 @@ interface Port-Channel1
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1101 |  IRB  |  10.1.1.11/24  |  -  |  -  |  -  |  -  |
 | Vlan1199 |  L2VLAN  |  10.1.99.11/24  |  -  |  -  |  -  |  -  |
+| Vlan1301 |  FW  |  10.3.1.11/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -344,6 +351,12 @@ interface Vlan1199
    no shutdown
    vrf L2VLAN
    ip address 10.1.99.11/24
+!
+interface Vlan1301
+   description vrf-irb-vlan1301
+   no shutdown
+   vrf FW
+   ip address 10.3.1.11/24
 ```
 
 ## Routing
@@ -366,6 +379,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| FW | True |
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
@@ -377,6 +391,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
@@ -392,6 +407,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| FW | false |
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
@@ -404,13 +420,78 @@ ip routing vrf MGMT
 | --- | ------------------ | ----------- | -------------- | ----------------------- | --- | ---------- | ------ |
 | MGMT | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 | IRB | 10.1.0.0/16 | 10.1.1.1 | - | 1 | - | - | - |
+| FW | 10.3.255.0/24 | 10.3.1.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
+ip route vrf FW 10.3.255.0/24 10.3.1.1
 ip route vrf IRB 10.1.0.0/16 10.1.1.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
+```
+
+### Router BGP
+
+ASN Notation: asplain
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65103 | 10.255.1.11 |
+
+| BGP Tuning |
+| ---------- |
+| bgp default ipv4-unicast |
+| maximum-paths 4 ecmp 4 |
+
+#### Router BGP Peer Groups
+
+##### MPLS-BACKBONE-FW-VRF
+
+| Settings | Value |
+| -------- | ----- |
+| Remote AS | 65000 |
+| BFD | True |
+| Ebgp multihop | 10 |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.3.255.1 | Inherited from peer group MPLS-BACKBONE-FW-VRF | FW | - | Inherited from peer group MPLS-BACKBONE-FW-VRF | Inherited from peer group MPLS-BACKBONE-FW-VRF | - | Inherited from peer group MPLS-BACKBONE-FW-VRF | - | - | - | - |
+| 10.3.255.2 | Inherited from peer group MPLS-BACKBONE-FW-VRF | FW | - | Inherited from peer group MPLS-BACKBONE-FW-VRF | Inherited from peer group MPLS-BACKBONE-FW-VRF | - | Inherited from peer group MPLS-BACKBONE-FW-VRF | - | - | - | - |
+
+#### Router BGP VRFs
+
+| VRF | Route-Distinguisher | Redistribute |
+| --- | ------------------- | ------------ |
+| FW | - | connected |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65103
+   router-id 10.255.1.11
+   bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor MPLS-BACKBONE-FW-VRF peer group
+   neighbor MPLS-BACKBONE-FW-VRF remote-as 65000
+   neighbor MPLS-BACKBONE-FW-VRF bfd
+   neighbor MPLS-BACKBONE-FW-VRF ebgp-multihop 10
+   neighbor MPLS-BACKBONE-FW-VRF send-community
+   neighbor MPLS-BACKBONE-FW-VRF maximum-routes 0
+   !
+   vrf FW
+      neighbor 10.3.255.1 peer group MPLS-BACKBONE-FW-VRF
+      neighbor 10.3.255.1 description s1-pe01-Loopback1013
+      neighbor 10.3.255.2 peer group MPLS-BACKBONE-FW-VRF
+      neighbor 10.3.255.2 description s1-pe02-Loopback1013
+      redistribute connected
 ```
 
 ## VRF Instances
@@ -421,6 +502,7 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| FW | enabled |
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
@@ -432,6 +514,8 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
