--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -365,6 +365,7 @@ service routing protocols model multi-agent
 | default | True |
 | ATM | True |
 | ETHERNET_VPN | True |
+| FW | True |
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
@@ -376,6 +377,7 @@ service routing protocols model multi-agent
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
@@ -391,6 +393,7 @@ ip routing vrf MGMT
 | ATM | false |
 | default | false |
 | ETHERNET_VPN | false |
+| FW | false |
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
@@ -513,6 +516,7 @@ route-map RM-MARK-ATM-CE03 permit 10
 | -------- | ---------- |
 | ATM | enabled |
 | ETHERNET_VPN | enabled |
+| FW | enabled |
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
@@ -524,6 +528,8 @@ route-map RM-MARK-ATM-CE03 permit 10
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
