--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -51,6 +51,9 @@
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
+- [Maintenance Mode](#maintenance-mode)
+  - [Interface Groups](#interface-groups)
+  - [Maintenance](#maintenance)
 
 ## Management
 
@@ -806,4 +809,66 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 90
 vrf instance ATM
 !
 vrf instance MGMT
+```
+
+## Maintenance Mode
+
+### Interface Groups
+
+#### Interface Groups Summary
+
+| Interface Group | Interfaces | Interface maintenance profile | BGP maintenance profiles |
+| --------------- | ---------- | ----------------------------- | ------------------------ |
+| serverLinkGroup | Ethernet4 | shutdownIntf | Default |
+
+#### Interface Groups Device Configuration
+
+```eos
+!
+group interface serverLinkGroup
+   interface Ethernet4
+   maintenance profile interface shutdownIntf
+```
+
+### Maintenance
+
+#### Maintenance defaults
+
+Default maintenance bgp profile: **Default**
+
+Default maintenance interface profile: **Default**
+
+Default maintenance unit profile: **Default**
+
+#### Maintenance profiles
+
+| BGP profile | Initiator route-map |
+| ----------- | ------------------- |
+
+| Interface profile | Rate monitoring load interval (s) | Rate monitoring threshold in/out (kbps) | Shutdown Max Delay |
+|-------------------|-----------------------------------|-----------------------------------------|--------------------|
+| shutdownIntf | 60 | 100 | 0 |
+
+| Unit profile | on-boot duration (s) |
+| ------------ | -------------------- |
+| onBootDelay | 600 |
+
+#### Maintenance units
+
+| Unit | Interface groups | BGP groups | Unit profile | Quiesce |
+| ---- | ---------------- | ---------- | ------------ | ------- |
+| serverLinks | shutdownIntf | - | onBootDelay | No |
+
+#### Maintenance Device Configuration
+
+```eos
+!
+maintenance
+   profile interface shutdownIntf
+      shutdown max-delay 0
+   profile unit onBootDelay
+      on-boot duration 600
+   unit serverLinks
+      group interface shutdownIntf
+      profile unit onBootDelay
 ```
