feat(evpn): Add VPWS service between s1-pe03 and s1-pe04

--- a/config-builder/documentation/devices/s1-ce04.md
+++ b/config-builder/documentation/devices/s1-ce04.md
@@ -251,6 +251,7 @@ alias summary6 show ipv6 bgp summary
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1114 | SVC01_C1_VLAN_SITE01_PE04 | - |
+| 1401 | VPWS-1401 | - |
 
 ### VLANs Device Configuration
 
@@ -258,6 +259,9 @@ alias summary6 show ipv6 bgp summary
 !
 vlan 1114
    name SVC01_C1_VLAN_SITE01_PE04
+!
+vlan 1401
+   name VPWS-1401
 ```
 
 ## Interfaces
@@ -271,6 +275,7 @@ vlan 1114
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
 | Ethernet1 | to s1-pe04 ethernet4 | trunk | 1-4094 | - | - | - |
+| Ethernet3 | to s1-pe04 ethernet6 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -306,6 +311,12 @@ interface Ethernet2.101
    encapsulation dot1q vlan 101
    vrf ATM
    ip address 10.2.0.3/31
+!
+interface Ethernet3
+   description to s1-pe04 ethernet6
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
+   switchport
 ```
 
 ### VLAN Interfaces
@@ -315,12 +326,14 @@ interface Ethernet2.101
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1114 | SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN | ETHERNET_VPN | - | False |
+| Vlan1401 | vrf-vpws | VPWS | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1114 |  ETHERNET_VPN  |  10.1.4.14/24  |  -  |  -  |  -  |  -  |
+| Vlan1401 |  VPWS  |  10.4.1.14/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -331,6 +344,12 @@ interface Vlan1114
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.4.14/24
+!
+interface Vlan1401
+   description vrf-vpws
+   no shutdown
+   vrf VPWS
+   ip address 10.4.1.14/24
 ```
 
 ## Routing
@@ -357,6 +376,7 @@ service routing protocols model multi-agent
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
+| VPWS | False |
 
 #### IP Routing Device Configuration
 
@@ -369,6 +389,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 ```
 
 ### IPv6 Routing
@@ -385,6 +406,7 @@ ip routing vrf MGMT
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
+| VPWS | false |
 
 ### Static Routes
 
@@ -507,6 +529,7 @@ route-map RM-MARK-ATM-CE04 permit 10
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
+| VPWS | disabled |
 
 ### VRF Instances Device Configuration
 
@@ -523,4 +546,6 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 ```
