--- a/config-builder/documentation/devices/s1-pe03.md
+++ b/config-builder/documentation/devices/s1-pe03.md
@@ -43,6 +43,9 @@
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
   - [MPLS Interfaces](#mpls-interfaces)
+- [Patch Panel](#patch-panel)
+  - [Patch Panel Summary](#patch-panel-summary)
+  - [Patch Panel Device Configuration](#patch-panel-device-configuration)
 - [Multicast](#multicast)
   - [IP IGMP Snooping](#ip-igmp-snooping)
 - [Filters](#filters)
@@ -387,6 +390,12 @@ vlan 1199
 #### Ethernet Interfaces Device Configuration
 
 ```eos
+!
+interface eth6
+   no shutdown
+   no switchport
+   no lldp transmit
+   no lldp receive
 !
 interface Ethernet1
    description P2P_s1-p01_Ethernet3
@@ -740,6 +749,12 @@ ASN Notation: asdot
 | 1103 | 10.255.1.3:11103 | 11103:11103 | - | - | learned |
 | 1199 | 10.255.1.3:11199 | 11199:11199 | - | - | learned |
 
+#### Router BGP VPWS Instances
+
+| Instance | Route-Distinguisher | Both Route-Target | MPLS Control Word | Label Flow | MTU | Pseudowire | Local ID | Remote ID |
+| -------- | ------------------- | ----------------- | ----------------- | -----------| --- | ---------- | -------- | --------- |
+| VPWS | 10.255.1.3:14000 | 14000:14000 | True | False | - | s1-ce03-s1-ce04 | 3 | 4 |
+
 #### Router BGP VRFs
 
 | VRF | Route-Distinguisher | Redistribute |
@@ -782,6 +797,14 @@ router bgp 65000
       rd 10.255.1.3:11199
       route-target both 11199:11199
       redistribute learned
+   !
+   vpws VPWS
+      rd 10.255.1.3:14000
+      route-target import export evpn 14000:14000
+      mpls control-word
+      !
+      pseudowire s1-ce03-s1-ce04
+         evpn vpws id local 3 remote 4
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
@@ -859,6 +882,27 @@ mpls ip
 | --------- | --------------- | ----------- | -------- |
 | Ethernet1 | True | - | - |
 | Ethernet2 | True | - | - |
+
+## Patch Panel
+
+### Patch Panel Summary
+
+#### Patch Panel Connections
+
+| Patch Name | Enabled | Connector A Type | Connector A Endpoint | Connector B Type | Connector B Endpoint |
+| ---------- | ------- | ---------------- | -------------------- | ---------------- | -------------------- |
+| s1-ce03-s1-ce04 | True | Interface | eth6 | Pseudowire | bgp vpws VPWS pseudowire s1-ce03-s1-ce04 |
+
+### Patch Panel Device Configuration
+
+```eos
+!
+patch panel
+   patch s1-ce03-s1-ce04
+      connector 1 interface eth6
+      connector 2 pseudowire bgp vpws VPWS pseudowire s1-ce03-s1-ce04
+   !
+```
 
 ## Multicast
 
