--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -345,6 +345,7 @@ service routing protocols model multi-agent
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
+| VPWS | False |
 
 #### IP Routing Device Configuration
 
@@ -357,6 +358,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 ```
 
 ### IPv6 Routing
@@ -373,6 +375,7 @@ ip routing vrf MGMT
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
+| VPWS | false |
 
 ### Static Routes
 
@@ -426,6 +429,7 @@ router ospf 1205 vrf ATM
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
+| VPWS | disabled |
 
 ### VRF Instances Device Configuration
 
@@ -442,4 +446,6 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 ```
