--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -37,6 +37,7 @@
   - [Static Routes](#static-routes)
   - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
+  - [Router BGP](#router-bgp)
 - [BFD](#bfd)
   - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
@@ -651,6 +652,111 @@ router isis CORE
    !
    segment-routing mpls
       no shutdown
+```
+
+### Router BGP
+
+ASN Notation: asdot
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65000 | 10.255.1.5 |
+
+| BGP Tuning |
+| ---------- |
+| no bgp default ipv4-unicast |
+| maximum-paths 4 ecmp 4 |
+
+#### Router BGP Peer Groups
+
+##### MPLS-OVERLAY-PEERS
+
+| Settings | Value |
+| -------- | ----- |
+| Address Family | mpls |
+| Remote AS | 65000 |
+| Source | Loopback0 |
+| BFD | True |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+
+#### Router BGP EVPN Address Family
+
+##### EVPN Peer Groups
+
+| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
+| ---------- | -------- | ------------ | ------------- | ------------- |
+| MPLS-OVERLAY-PEERS | True |  - | - | mpls |
+
+##### EVPN Neighbor Default Encapsulation
+
+| Neighbor Default Encapsulation | Next-hop-self Source Interface |
+| ------------------------------ | ------------------------------ |
+| mpls | Loopback0 |
+
+#### Router BGP VLANs
+
+| VLAN | Route-Distinguisher | Both Route-Target | Import Route Target | Export Route-Target | Redistribute |
+| ---- | ------------------- | ----------------- | ------------------- | ------------------- | ------------ |
+| 1205 | 10.255.1.5:13205 | 13205:13205 | - | - | learned |
+
+#### Router BGP VRFs
+
+| VRF | Route-Distinguisher | Redistribute |
+| --- | ------------------- | ------------ |
+| ATM | 10.255.1.5:12 | connected<br>ospf |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65000
+   bgp asn notation asdot
+   router-id 10.255.1.5
+   no bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
+   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.4 description s2-p02_Loopback0
+   !
+   vlan 1205
+      rd 10.255.1.5:13205
+      route-target both 13205:13205
+      redistribute learned
+   !
+   address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS encapsulation mpls
+   !
+   address-family ipv4
+      no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.5:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.5
+      redistribute connected
+      redistribute ospf
 ```
 
 ## BFD
