--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -383,6 +383,7 @@ service routing protocols model multi-agent
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
+| VPWS | False |
 
 #### IP Routing Device Configuration
 
@@ -395,6 +396,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 ```
 
 ### IPv6 Routing
@@ -411,6 +413,7 @@ ip routing vrf MGMT
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
+| VPWS | false |
 
 ### Static Routes
 
@@ -506,6 +509,7 @@ router bgp 65103
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
+| VPWS | disabled |
 
 ### VRF Instances Device Configuration
 
@@ -522,4 +526,6 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 ```
