--- a/config-builder/documentation/devices/s1-ce03.md
+++ b/config-builder/documentation/devices/s1-ce03.md
@@ -252,6 +252,7 @@ alias summary6 show ipv6 bgp summary
 | ------- | ---- | ------------ |
 | 1103 | ETHERNET-VPN-IRB-1103 | - |
 | 1199 | ETHERNET-VPN-L2VLAN-1199 | - |
+| 1401 | VPWS-1401 | - |
 
 ### VLANs Device Configuration
 
@@ -262,6 +263,9 @@ vlan 1103
 !
 vlan 1199
    name ETHERNET-VPN-L2VLAN-1199
+!
+vlan 1401
+   name VPWS-1401
 ```
 
 ## Interfaces
@@ -275,6 +279,7 @@ vlan 1199
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
 | Ethernet1 | to s1-pe02 ethernet4 | trunk | 1-4094 | - | - | - |
+| Ethernet3 | to s1-pe03 ethernet6 | trunk | 1-4094 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -310,6 +315,12 @@ interface Ethernet2.101
    encapsulation dot1q vlan 101
    vrf ATM
    ip address 10.2.0.1/31
+!
+interface Ethernet3
+   description to s1-pe03 ethernet6
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
+   switchport
 ```
 
 ### VLAN Interfaces
@@ -320,6 +331,7 @@ interface Ethernet2.101
 | --------- | ----------- | --- | ---- | -------- |
 | Vlan1103 | vrf-irb-vlan1101 | IRB | - | False |
 | Vlan1199 | vrf-irb-vlan1199 | L2VLAN | - | False |
+| Vlan1401 | vrf-vpws | VPWS | - | False |
 
 ##### IPv4
 
@@ -327,6 +339,7 @@ interface Ethernet2.101
 | --------- | --- | ---------- | ------------------ | ------------------------- | ------ | ------- |
 | Vlan1103 |  IRB  |  10.1.3.13/24  |  -  |  -  |  -  |  -  |
 | Vlan1199 |  L2VLAN  |  10.1.99.13/24  |  -  |  -  |  -  |  -  |
+| Vlan1401 |  VPWS  |  10.4.1.13/24  |  -  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
@@ -343,6 +356,12 @@ interface Vlan1199
    no shutdown
    vrf L2VLAN
    ip address 10.1.99.13/24
+!
+interface Vlan1401
+   description vrf-vpws
+   no shutdown
+   vrf VPWS
+   ip address 10.4.1.13/24
 ```
 
 ## Routing
@@ -369,6 +388,7 @@ service routing protocols model multi-agent
 | IRB | True |
 | L2VLAN | True |
 | MGMT | True |
+| VPWS | False |
 
 #### IP Routing Device Configuration
 
@@ -381,6 +401,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 ```
 
 ### IPv6 Routing
@@ -397,6 +418,7 @@ ip routing vrf MGMT
 | IRB | false |
 | L2VLAN | false |
 | MGMT | false |
+| VPWS | false |
 
 ### Static Routes
 
@@ -520,6 +542,7 @@ route-map RM-MARK-ATM-CE03 permit 10
 | IRB | enabled |
 | L2VLAN | enabled |
 | MGMT | enabled |
+| VPWS | disabled |
 
 ### VRF Instances Device Configuration
 
@@ -536,4 +559,6 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 ```
