--- a/config-builder/documentation/devices/s1-pe04.md
+++ b/config-builder/documentation/devices/s1-pe04.md
@@ -33,11 +33,15 @@
   - [Static Routes](#static-routes)
   - [Router OSPF](#router-ospf)
   - [Router ISIS](#router-isis)
+  - [Router BGP](#router-bgp)
 - [BFD](#bfd)
   - [Router BFD](#router-bfd)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
   - [MPLS Interfaces](#mpls-interfaces)
+- [Patch Panel](#patch-panel)
+  - [Patch Panel Summary](#patch-panel-summary)
+  - [Patch Panel Device Configuration](#patch-panel-device-configuration)
 - [Multicast](#multicast)
   - [IP IGMP Snooping](#ip-igmp-snooping)
 - [Filters](#filters)
@@ -363,6 +367,12 @@ vlan internal order ascending range 1006 1199
 
 ```eos
 !
+interface eth6
+   no shutdown
+   no switchport
+   no lldp transmit
+   no lldp receive
+!
 interface Ethernet1
    description P2P_s1-p01_Ethernet4
    no shutdown
@@ -617,6 +627,128 @@ router isis CORE
       no shutdown
 ```
 
+### Router BGP
+
+ASN Notation: asdot
+
+#### Router BGP Summary
+
+| BGP AS | Router ID |
+| ------ | --------- |
+| 65000 | 10.255.1.4 |
+
+| BGP Tuning |
+| ---------- |
+| no bgp default ipv4-unicast |
+| maximum-paths 4 ecmp 4 |
+
+#### Router BGP Peer Groups
+
+##### ATM-BACKBONE
+
+| Settings | Value |
+| -------- | ----- |
+
+##### MPLS-OVERLAY-PEERS
+
+| Settings | Value |
+| -------- | ----- |
+| Address Family | mpls |
+| Remote AS | 65000 |
+| Source | Loopback0 |
+| BFD | True |
+| Send community | all |
+| Maximum routes | 0 (no limit) |
+
+#### BGP Neighbors
+
+| Neighbor | Remote AS | VRF | Shutdown | Send-community | Maximum-routes | Allowas-in | BFD | RIB Pre-Policy Retain | Route-Reflector Client | Passive | TTL Max Hops |
+| -------- | --------- | --- | -------- | -------------- | -------------- | ---------- | --- | --------------------- | ---------------------- | ------- | ------------ |
+| 10.255.0.1 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.255.0.4 | Inherited from peer group MPLS-OVERLAY-PEERS | default | - | Inherited from peer group MPLS-OVERLAY-PEERS | Inherited from peer group MPLS-OVERLAY-PEERS | - | Inherited from peer group MPLS-OVERLAY-PEERS | - | - | - | - |
+| 10.2.0.3 | 65101 | ATM | - | - | - | - | - | - | - | - | - |
+
+#### Router BGP EVPN Address Family
+
+##### EVPN Peer Groups
+
+| Peer Group | Activate | Route-map In | Route-map Out | Encapsulation |
+| ---------- | -------- | ------------ | ------------- | ------------- |
+| MPLS-OVERLAY-PEERS | True |  - | - | mpls |
+
+##### EVPN Neighbor Default Encapsulation
+
+| Neighbor Default Encapsulation | Next-hop-self Source Interface |
+| ------------------------------ | ------------------------------ |
+| mpls | Loopback0 |
+
+#### Router BGP VPWS Instances
+
+| Instance | Route-Distinguisher | Both Route-Target | MPLS Control Word | Label Flow | MTU | Pseudowire | Local ID | Remote ID |
+| -------- | ------------------- | ----------------- | ----------------- | -----------| --- | ---------- | -------- | --------- |
+| VPWS | 10.255.1.4:14000 | 14000:14000 | False | False | - | s1-ce03-s1-ce04 | 4 | 3 |
+
+#### Router BGP VRFs
+
+| VRF | Route-Distinguisher | Redistribute |
+| --- | ------------------- | ------------ |
+| ATM | 10.255.1.4:12 | connected<br>ospf |
+
+#### Router BGP Device Configuration
+
+```eos
+!
+router bgp 65000
+   bgp asn notation asdot
+   router-id 10.255.1.4
+   no bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
+   neighbor MPLS-OVERLAY-PEERS password 7 <removed>
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.4 description s2-p02_Loopback0
+   !
+   vpws VPWS
+      rd 10.255.1.4:14000
+      route-target import export evpn 14000:14000
+      !
+      pseudowire s1-ce03-s1-ce04
+         evpn vpws id local 4 remote 3
+   !
+   address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS encapsulation mpls
+   !
+   address-family ipv4
+      neighbor ATM-BACKBONE activate
+      no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.4:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.4
+      neighbor 10.2.0.3 peer group ATM-BACKBONE
+      neighbor 10.2.0.3 remote-as 65101
+      neighbor 10.2.0.3 description ATM CONNECTITVITY S1-CE04
+      redistribute connected
+      redistribute ospf
+      !
+      address-family ipv4
+         neighbor 10.2.0.3 activate
+```
+
 ## BFD
 
 ### Router BFD
@@ -662,6 +794,27 @@ mpls ip
 | --------- | --------------- | ----------- | -------- |
 | Ethernet1 | True | - | - |
 | Ethernet2 | True | - | - |
+
+## Patch Panel
+
+### Patch Panel Summary
+
+#### Patch Panel Connections
+
+| Patch Name | Enabled | Connector A Type | Connector A Endpoint | Connector B Type | Connector B Endpoint |
+| ---------- | ------- | ---------------- | -------------------- | ---------------- | -------------------- |
+| s1-ce03-s1-ce04 | True | Interface | eth6 | Pseudowire | bgp vpws VPWS pseudowire s1-ce03-s1-ce04 |
+
+### Patch Panel Device Configuration
+
+```eos
+!
+patch panel
+   patch s1-ce03-s1-ce04
+      connector 1 interface eth6
+      connector 2 pseudowire bgp vpws VPWS pseudowire s1-ce03-s1-ce04
+   !
+```
 
 ## Multicast
 
